exports[`test renders correctly when logged in as admin with course selected 1`] = `
<div
  className="authContainer">
  <div
    className="course-list-container">
    <div
      className="course-list">
      <h2 />
      <ul>
        <li
          onClick={[Function]}>
          example course
          <a
            href="urlAddressusers/certificate/example course/000000"
            target="_blank">
            <svg
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <g>
                <path
                  d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
              </g>
            </svg>
          </a>
        </li>
      </ul>
      <div>
        <p>
          Choose 
          <a
            className="redirect"
            onClick={[Function]}
            style={Object {}}>
            Quiz
          </a>
           or 
          <a
            className="redirect"
            onClick={[Function]}
            style={Object {}}>
            Lessons
          </a>
           to access course content
        </p>
      </div>
      <button
        onClick={[Function]}>
        Logout
      </button>
    </div>
  </div>
</div>
`;

exports[`test renders correctly when logged in as admin with no course selected 1`] = `
<div
  className="authContainer">
  <div
    className="course-list-container">
    <div
      className="course-list">
      <h2>
        Select course
      </h2>
      <ul>
        <li
          onClick={[Function]}>
          example course
          <a
            href="urlAddressusers/certificate/example course/000000"
            target="_blank">
            <svg
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <g>
                <path
                  d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
              </g>
            </svg>
          </a>
        </li>
      </ul>
      
      <button
        onClick={[Function]}>
        Logout
      </button>
    </div>
  </div>
</div>
`;

exports[`test renders correctly when logged in not as admin with course selected 1`] = `
<div
  className="authContainer">
  <div
    className="course-list-container">
    <div
      className="course-list">
      <h2 />
      <ul>
        <li
          onClick={[Function]}>
          example course
          <a
            href="urlAddressusers/certificate/example course/000000"
            target="_blank">
            <svg
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <g>
                <path
                  d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
              </g>
            </svg>
          </a>
        </li>
      </ul>
      <div>
        <p>
          Choose 
          <a
            className="redirect"
            onClick={[Function]}
            style={Object {}}>
            Quiz
          </a>
           or 
          <a
            className="redirect"
            onClick={[Function]}
            style={Object {}}>
            Lessons
          </a>
           to access course content
        </p>
      </div>
      <button
        onClick={[Function]}>
        Logout
      </button>
    </div>
  </div>
</div>
`;

exports[`test renders correctly when logged in not as admin with no course selected 1`] = `
<div
  className="authContainer">
  <div
    className="course-list-container">
    <div
      className="course-list">
      <h2>
        Select course
      </h2>
      <ul>
        <li
          onClick={[Function]}>
          example course
          <a
            href="urlAddressusers/certificate/example course/000000"
            target="_blank">
            <svg
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24">
              <g>
                <path
                  d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
              </g>
            </svg>
          </a>
        </li>
      </ul>
      
      <button
        onClick={[Function]}>
        Logout
      </button>
    </div>
  </div>
</div>
`;

exports[`test renders correctly when logged out 1`] = `
<div
  className="authContainer">
  <div
    className="authFormContainer">
    <h2>
      Welcome
    </h2>
    <h4>
      You must register or 
    </h4>
    <button
      className="toggleLogin"
      onClick={[Function]}>
      Login
    </button>
    <div
      className="registerContainer">
      <h3
        className="title">
        Register
      </h3>
      <form
        id="authForm"
        onSubmit={[Function]}>
        <input
          className="auth"
          id="userName"
          placeholder="name"
          type="text" />
        <input
          className="auth"
          id="email"
          placeholder="email"
          type="email" />
        <input
          className="auth"
          id="password"
          placeholder="password"
          type="password" />
        <button
          className="authButton"
          type="submit">
          Register
        </button>
      </form>
    </div>
  </div>
</div>
`;
